--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,7 +14,10 @@
 
     <div class="form-group">
       <label for="workAddress">Work Address</label>
-      <input type="text" id="workAddress" placeholder="123 Main St, New York, NY">
+      <div class="autocomplete-container">
+        <input type="text" id="workAddress" placeholder="123 Main St, New York, NY" autocomplete="off">
+        <div id="autocomplete-results" class="autocomplete-results"></div>
+      </div>
       <small>Enter your full work address</small>
     </div>
 
@@ -27,6 +30,14 @@
         </a>
         (no credit card needed)
       </small>
+    </div>
+
+    <div class="form-group checkbox-group">
+      <label class="checkbox-label">
+        <input type="checkbox" id="debugMode">
+        <span>Debug Mode</span>
+      </label>
+      <small>Show extraction and API details in the console</small>
     </div>
 
     <button id="saveBtn">Save Settings</button>
